--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+css
+
 @font-face {
 	font-family: “Pudelinka”;
 	src: url(”Fonts/pudelinka.ttf” ) format('truetype’);
 	font-weight: normal;
 	font-style: normal;
 }
+
 body{
 	background-color: #fff8e1;
 	margin-left: 20%;
@@ -11,10 +14,15 @@ body{
 	border: 2px dotted black;
 	padding: 10px 10px 10px 10px;
 	font-family: sans serif;
+	
     }
+
 blockquote.q {
 	color: #D4AF37;
 	border-left: 4px solid #8B0000;
 	font-style: italic;
 }
+
 p.quote { font-family: “Pudelinka”, cursive;}
+color: #ffa500
+}
