--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
 body {
-  background-color: #e3f2fd !important;
-  color: #0d47a1 !important;
+  background-color: #f9f9f9; /* светло-серый фон */
+  color: #333;              /* тёмный текст */
 }
