--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
 body {
-  background-color: #f9f9f9; /* светло-серый фон */
+background-color: #e3f2fd;
   color: #333;              /* тёмный текст */
 }
