--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
 body {
-background-color: #e3f2fd;
+background-color: #e3f2fd;  /* голубой текст*/
   color: #333;              /* тёмный текст */
 }
